manifest.prod.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: tpi-prod
---
# Database definitions
---
# Postgres
---
## Postgres ConfigMap
---
## Postgres Persistent Volume
---
# Postgres Deployment
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: tpi-prod
spec:
  selector:
    matchLabels:
      app: postgres
  replicas: 1
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:10.4
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgres-persistent-storage
      volumes:
        - name: postgres-persistent-storage
          persistentVolumeClaim:
            claimName: postgres-pv-claim
---
## Postgres service
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: tpi-prod
  labels:
    app: postgres
spec:
  type: NodePort
  ports:
    - port: 5432
  selector:
    app: postgres
---
#  kubectl exec -n tpi-prod --stdin --tty postgres-7b7f8658c9-287bn  -- /bin/bash
---
# APP Definitions
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: todoapp-deployment
  name: todoapp-deployment
  namespace: tpi-prod
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      run: todoapp-deployment
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        run: todoapp-deployment
    spec:
      containers:
        - image: patriciocostilla/todoapp:latest
          imagePullPolicy: Always
          name: todoapp-deployment
          ports:
            - containerPort: 8000
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: todoapp-service
  namespace: tpi-prod
spec:
  selector:
    run: todoapp-deployment
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todoapp-ingress
  namespace: tpi-prod
  # annotations:
  #  nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /tpi/prod
            pathType: Prefix
            backend:
              service:
                name: todoapp-service
                port:
                  number: 80
---
# kubectl exec -n tpi-prod --stdin --tty todoapp-deployment-59657f854b-78vcr  -- sh
